[project]
name = "autorl"
version = "0.1.0"
description = "A minimal autoresearch-style scaffold for RL environment invention."
requires-python = ">=3.10"

[project.scripts]
autorl = "cli:main"

[tool.setuptools]
py-modules = ["cli"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
